# stressed

./: Cargo.toml  README.md
.github/workflows/: main.yml
docs/: CLI.md
src/: args.rs  checker.rs  communicator.rs  lib.rs  main.rs  runner.rs  sampler.rs  solver.rs  utils.rs
src/checker/: custom_checker.rs  default_checker.rs  errors.rs
src/utils/: compare_error.rs  messages.rs
