[package]
name = "stressed"
version = "0.1.0"
edition = "2021"
default-run = "stressed"

[features]
multithreaded = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
clap = { version = "4.3.12", features = ["derive"] }
colored = "2.0.4"
futures = "0.3.28"
indicatif = "0.17.5"
similar = "2.2.1"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = "0.7.8"
