[package]
name = "stressed"
version = "1.1.0"
edition = "2021"
default-run = "stressed"
license = "MIT"
description = "Universal CLI stress tester for competitive programming"
homepage = "https://github.com/w3rew/stressed"
documentation = "https://github.com/w3rew/stressed"
repository = "https://github.com/w3rew/stressed"
readme = "README.md"
categories = ["command-line-utilities", "asynchronous"]
keywords = ["competitive", "stress-test", "checker", "solver", "generator"]

[features]
multithreaded = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
clap = { version = "4.3.12", features = ["derive"] }
colored = "2.0.4"
futures = "0.3.28"
indicatif = "0.17.5"
similar = "2.2.1"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = "0.7.8"
